zeit.content.article changes
============================

3.1.1 (unreleased)
------------------

- Display "Deeplink URL" field (VIV-270).


3.1.0 (2014-01-07)
------------------

- Configure layouts for image and video blocks via external XML file (VIV-249,
  VIV-250).

- Implement block with title and (restricted) HTML contents (VIV-245).

- Add IZONArticle marker interface so we can show some settings only for
  non-ZMO articles (VIV-252).

- Fix bug from 3.0.12: Have ``title`` and ``alt`` attributes survive checkin
  (VIV-157).


3.0.12 (2013-11-15)
-------------------

- Allow setting ``title`` and ``alt`` attribute on image blocks (VIV-157).


3.0.11 (2013-10-02)
-------------------

- Make use of webdriver (#12573).

- Update to lxml-3.x (#11611).

- Fix bug with losing whitespace by properly configuring the lxml.objectify
  parser (#12016).


3.0.10 (2013-10-01)
-------------------

- Fix styling of rel="nofollow" checkbox on Mac (VIV-104).


3.0.9 (2013-09-24)
------------------

- Support rel="nofollow" for links in the article body (VIV-104).

- Display ``breadcrumb_title`` field (VIV-105).

- Handle inserting links across tags (#12558).

- Display proper name for "last published by" status.

- Add genre to XML references (WEB-35)

- Remove unittest2, we have 2.7 now


3.0.8 (2013-08-27)
------------------

- Add "genre" field for articles (#12725).

- Display "Mobile URL" field (#12749).

- Display overlay with edit button for images in repository mode, too (#12707).


3.0.7 (2013-08-14)
------------------

- Update to Python-2.7 and ZTK-1.1.5 (#11005).


3.0.6 (2013-07-11)
------------------

- Make keywords optional for the time being.


3.0.5 (2013-07-10)
------------------

- Require at least three keywords, not just one.


3.0.4 (2013-07-08)
------------------

- Include timezone when rendering last published date.

- Prevent editor from saving when nothing has changed to make UI more
  responsive. (#12555)


3.0.3 (2013-07-01)
------------------
