@@ -6,6 +6,9 @@ zeit.content.article changes
 
 - Display "Deeplink URL" field (VIV-270).
 
+- Implement EditableBody.values() so that it works without UUID attributes,
+  this alleviates concurrency problems noted in zeit.frontend (FRIED-23).
+
 
 3.1.0 (2014-01-07)
 ------------------
